# dgfreg

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
.github/workflows/: render_docs.yml  run_pytest.yml
data/raw/: G.csv  compounds.csv  e_coli_ccm_metabolites.csv  e_coli_ccm_reactions.csv  group_definitions.csv  group_summary.csv  reactions.csv  tecr.csv
dgfreg/: __init__.py  component_contribution_replication.py  data_preparation.py  fetch_e_coli_core_data.py  fetch_equilibrator_data.py  inference_configuration.py  investigate.ipynb  mixed_model.py  prepare_data.py  sample.py  stan_input_functions.py  unobserved.py
dgfreg/stan/: .gitignore  component.stan  compound.stan  group.stan  multilevel-linear-regression.stan  new.stan
docs/: .gitignore  _quarto.yml  bibliography.bib  report.docx  report.html  report.qmd
inferences/: gaussian_approximation_mean.csv
inferences/equilibrator_component/: config.toml  mcmc-run.yaml
inferences/equilibrator_custom_test/: config.toml
notebooks/: 24_01_27_eta_analysis.ipynb  24_01_28_residual_analysis.ipynb  initial_investigation.ipynb
tests/: conftest.py
tests/test_unit/: test_mixed_model.py  test_util.py
