[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dgfreg"
authors = [
    {name = "Teddy Groves", email = "tedgro@biosustain.dtu.dk"},
]
version = "0.0.1"
description = "Regression models estimating standard condition Gibbs free energy changes of biological compounds"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arviz",
    "cmdstanpy",
    "jupyter",
    "numpy",
    "pandas~=1.0", # To match cobrapy
    "cobra@git+https://github.com/opencobra/cobrapy.git@devel",
    "component_contribution@git+https://gitlab.com/equilibrator/component-contribution.git@c9daebf4bcf3c6fc84ccc83d1a6aa62df9d61248",
    "equilibrator_api",
    "pandera >= 0.17.0",
    "pydantic >= 2.0.0",
    "pandera",
    "pyspark",
    "scipy",
    "scikit-learn",
    "toml",
    "pytest",
    "black",
    "nbstripout",]

[tool.setuptools]
packages = ["dgfreg"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "80"
